src/objects/PM_Approved_Mfg_Plant__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <formula>Plant__r.city__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Number__c</fullName>
        <formula>Plant__r.Plant_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <referenceTo>Plant__c</referenceTo>
        <relationshipLabel>PM Approved Mfg Plant</relationshipLabel>
        <relationshipName>PM_Approved_Mfg_Plant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>PM Approved Mfg Plant</relationshipLabel>
        <relationshipName>PM_Approved_Mfg_Plant</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PM Approved Mfg Plant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMAP-{0000000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Approved Mfg Plant</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>